tests/fixtures/invalid/chr_str.py
# Cannot call chr() with Str
x = chr("hello")
